force-app/main/default/objects/Shelter_Note__c/Shelter_Note__c.object-meta.xml
<CustomObject>
    <label>Shelter Note</label>
    <nameField>
        <displayFormat>SN-{00000}</displayFormat>
        <label>Shelter Note ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shelter Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>