force-app/main/default/objects/Shelter_Note__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Shelter Notes</relationshipLabel>
    <relationshipName>Shelter_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>