force-app/main/default/objects/Shelter_Note__c/fields/Editor__c.field-meta.xml
<CustomField>
    <fullName>Editor__c</fullName>
    <inlineHelpText>Please enter your initials, today&apos;s date, and time.</inlineHelpText>
    <label>Editor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>