force-app/main/default/objects/Shelter_Note__c/fields/Shelter_Lead__c.field-meta.xml
<CustomField>
    <fullName>Shelter_Lead__c</fullName>
    <label>Shelter Lead</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amanda Kruczynski</fullName>
            </value>
            <value>
                <fullName>Carrie Bretz</fullName>
            </value>
            <value>
                <fullName>Catherine Adair</fullName>
            </value>
            <value>
                <fullName>E.G. Agulier</fullName>
            </value>
            <value>
                <fullName>Hailey Kohl</fullName>
            </value>
            <value>
                <fullName>Heather Boothe</fullName>
            </value>
            <value>
                <fullName>Jasmine Holsinger</fullName>
            </value>
            <value>
                <fullName>Joanne Smith</fullName>
            </value>
            <value>
                <fullName>Lacie Davis</fullName>
            </value>
            <value>
                <fullName>Lani Lococo</fullName>
            </value>
            <value>
                <fullName>Lois Michael</fullName>
            </value>
            <value>
                <fullName>Megan Holliday</fullName>
            </value>
            <value>
                <fullName>Niki Curnell</fullName>
            </value>
            <value>
                <fullName>Paul Chiano</fullName>
            </value>
            <value>
                <fullName>Salina Wenzel</fullName>
            </value>
            <value>
                <fullName>Shannon Callahan</fullName>
            </value>
            <value>
                <fullName>Sherry Adams</fullName>
            </value>
            <value>
                <fullName>Tiffany Van Hook</fullName>
            </value>
            <value>
                <fullName>Tony Rankin</fullName>
            </value>
            <value>
                <fullName>Vicky Comrie</fullName>
            </value>
            <value>
                <fullName>Colleen Yarborough (not Porth)</fullName>
                <isActive>false</isActive>
                <label>Colleen Yarborough (not Porth)</label>
            </value>
            <value>
                <fullName>Ehren Melius</fullName>
                <isActive>false</isActive>
                <label>Ehren Melius</label>
            </value>
            <value>
                <fullName>Jason ONeail</fullName>
                <isActive>false</isActive>
                <label>Jason ONeail</label>
            </value>
            <value>
                <fullName>Jessi Biddle</fullName>
                <isActive>false</isActive>
                <label>Jessi Biddle</label>
            </value>
            <value>
                <fullName>Jessica Drew</fullName>
                <isActive>false</isActive>
                <label>Jessica Drew</label>
            </value>
            <value>
                <fullName>Joe Hinkle</fullName>
                <isActive>false</isActive>
                <label>Joe Hinkle</label>
            </value>
            <value>
                <fullName>Katelynn Nussbaum</fullName>
                <isActive>false</isActive>
                <label>Katelynn Nussbaum</label>
            </value>
            <value>
                <fullName>Lindsey Cooke</fullName>
                <isActive>false</isActive>
                <label>Lindsey Cooke</label>
            </value>
            <value>
                <fullName>Megan Arsenault</fullName>
                <isActive>false</isActive>
                <label>Megan Arsenault</label>
            </value>
            <value>
                <fullName>Rachel Mjoen</fullName>
                <isActive>false</isActive>
                <label>Rachel Mjoen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>