force-app/main/default/objects/Shelter_Note__c/fields/Shelter_Note_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Shelter_Note_Date_Time__c</fullName>
    <label>Shelter Note Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>